--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-spinners": "^0.13.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
