--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-spinners": "^0.13.4",
-    "swr": "^1.3.0"
+    "react-spinners": "^0.13.4"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
