--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.4"
   },
   "devDependencies": {
