--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,14 +21,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run export
+    - name: Yarn CLI
+      uses: CultureHQ/actions-yarn@v1.0.1
+      
+    - run: yarn install
+    - run: yarn build --if-present
+    - run: yarn export
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
