--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: CultureHQ/actions-yarn@v1.0.1
       
     - run: yarn install
-    - run: yarn build --if-present
+    - run: yarn build
     - run: yarn export
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
