--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.4",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
