--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build  ",
+    "build": "next build --turbo ",
     "export": "next export",
     "start": "next start"
   },
   "dependencies": {
-    "next": "12.3.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.4",
@@ -17,12 +17,12 @@
     "zustand": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
+    "typescript": "latest"
   }
 }
