--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "next start "
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-icons": "^4.4.0",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-spinners": "^0.13.4",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.31.3",
-    "zustand": "^4.2.0"
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest"
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.5"
   }
 }
