--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
     "build": "next build  ",
     "start": "next start ",
     "export": "next export",
-    "serve": "serve out"
+    "serve": "serve out -p 80"
   },
   "dependencies": {
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.8",
     "sharp": "^0.31.3",
-    "zustand": "^4.3.3"
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5"
   }
 }
