--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.8",
     "sharp": "^0.31.3",
-    "swr": "^2.1.3",
-    "zustand": "^4.3.5"
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
