--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build  ",
-    "start": "next start ",
+    "prod": "next start ",
     "export": "next export",
-    "serve": "serve out -p 3000"
+    "start": "serve out "
   },
   "dependencies": {
-    "next": "^13.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "next": "^13.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-spinners": "^0.13.8",
+    "serve": "^14.2.3",
     "sharp": "^0.31.3",
-    "zustand": "^4.3.5"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@types/node": "^18.14.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "@types/node": "^18.19.39",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^4.9.5"
   }
 }
